[package]
name = "bonsai-starter-methods-guest"
version = "0.1.0"
edition = "2021"

#[workspace]

[[bin]]
name = "bls"
path = "src/bin/bls.rs"

[dependencies]
milagro_bls = { path = '/home/noah/code/milagro_bls' }
hex = { version = "0.4.0" }
#{ git = "https://github.com/sigp/milagro_bls", tag = "v1.4.2", optional = true }
ethabi = { version = "18.0", default-features = false }
alloy-sol-types = "0.3.2"
# Directly import radium to silence warning about unused patch. See https://github.com/risc0/risc0/issues/549
radium = "=0.7.1"
risc0-zkvm = { git = "https://github.com/risc0/risc0", rev = "da5bc39089c6dba8b03510837f1c7363ed3cc8b7", default-features = false, features = ["std"] }

[patch.crates-io]
radium = { git = "https://github.com/bitvecto-rs/radium", rev = "723bed5abd75994ee4b7221b8b12c9f4e77ce408" }
# Placing these patch statement in the workspace Cargo.toml will add RISC Zero SHA-256 and bigint
# multiplication accelerator support for all downstream usages of the following crates.
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2/v0.10.6-risc0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.1-risc0"  }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risc0" }


[profile.release]
lto = true
opt-level = 3

[workspace]
